Polish posts, headings, islands, and copy button

--- a/src/content/posts/hello-world.mdx
+++ b/src/content/posts/hello-world.mdx
@@ -6,8 +6,13 @@ tags: [Astro, Setup]
 draft: false
 ---
 
-This is the first post. It supports **Markdown**.
+Welcome! This site is built with Astro and supports **Markdown** out of the box.
+
+## What to expect
+
+- Posts live in `src/content/posts/`
+- You can write normal Markdown, or use MDX when you want to embed components.
 
 ## MDX works too
 
-You can embed small components later if you want.
+MDX is useful for small interactive demos (Astro islands) without turning the whole page into a SPA.
