--- a/src/content/posts/why-astro.mdx
+++ b/src/content/posts/why-astro.mdx
@@ -6,4 +6,12 @@ tags: [Astro, Performance]
 draft: false
 ---
 
-Astro ships less JavaScript by default, which keeps pages fast and clean.
+Astro is a great fit for content-heavy sites because it ships less JavaScript by default.
+
+## The short version
+
+- Static-first: most pages render to HTML at build time.
+- Islands architecture: add interactivity only where needed.
+- Great performance defaults: fast pages without fighting the framework.
+
+On this site, I use islands for small widgets and keep the rest server-rendered.
