Normalize frontmatter tag arrays to strings

--- a/src/content/posts/hello-world.mdx
+++ b/src/content/posts/hello-world.mdx
@@ -2,7 +2,7 @@
 title: Hello World
 description: First post on the new site.
 pubDate: 2026-01-11
-tags: [Astro, Setup]
+tags: ["Astro", "Setup"]
 draft: false
 ---
 
