--- a/src/content/posts/why-astro.mdx
+++ b/src/content/posts/why-astro.mdx
@@ -2,7 +2,7 @@
 title: Why Astro
 description: A quick note on choosing a fast, static-first stack.
 pubDate: 2026-01-10
-tags: [Astro, Performance]
+tags: ["Astro", "Performance"]
 draft: false
 ---
 
