--- a/src/content/projects/another-work.mdx
+++ b/src/content/projects/another-work.mdx
@@ -2,8 +2,8 @@
 title: God's Chess
 summary: Award-winning VR strategy game with perspective switching and procedural terrain.
 date: 2024-01-01
-tech: [C#, Unity]
-tags: [VR, GameDev]
+tech: ["C#", "Unity"]
+tags: ["VR", "GameDev"]
 links:
   demo: https://youtu.be/Bk7ENnLNyvM
 featured: true
