--- a/src/content/projects/beast.mdx
+++ b/src/content/projects/beast.mdx
@@ -2,8 +2,8 @@
 title: B.E.A.S.T.
 summary: GRU-based attention model to predict freeway traffic during national holidays.
 date: 2021-12-01
-tech: [PyTorch Lightning, Plotly, Pandas, Weights & Biases]
-tags: [Time Series, ML]
+tech: ["PyTorch Lightning", "Plotly", "Pandas", "Weights & Biases"]
+tags: ["Time Series", "ML"]
 links:
   repo: https://github.com/andy89923/Freeway_ETC2021
 featured: false
