--- a/src/content/projects/fcs-orient-2021.mdx
+++ b/src/content/projects/fcs-orient-2021.mdx
@@ -2,8 +2,8 @@
 title: FCS Orient 2021
 summary: Multiplayer interactive web platform for an orienteering event with real-time scoring and chat.
 date: 2021-08-01
-tech: [React, MongoDB, WebSocket, Nginx]
-tags: [Web, Realtime]
+tech: ["React", "MongoDB", "WebSocket", "Nginx"]
+tags: ["Web", "Realtime"]
 links:
   repo: https://github.com/scott306lr/fcs_orient_2021
 featured: false
