--- a/src/content/projects/sample-project.mdx
+++ b/src/content/projects/sample-project.mdx
@@ -2,8 +2,8 @@
 title: SubSpec
 summary: Open-source LLM inference framework for tree-based speculative decoding research.
 date: 2025-01-01
-tech: [PyTorch, Transformers]
-tags: [LLM, Inference, Speculative Decoding]
+tech: ["PyTorch", "Transformers"]
+tags: ["LLM", "Inference", "Speculative Decoding"]
 links:
   repo: https://github.com/NYCU-EDgeAi/subspec
 featured: true
